--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,11 @@ hs_err_pid*
 
 # IntelliJ IDEA
 out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
 
 # Project
 /src/myMusicPlayer/Resources/config.properties
